# interpretable-ml

./: .gitignore  README.md  hello.py  pyproject.toml  setup.py
ml/: data.py  utils.py
notebooks/: data.ipynb  hello.ipynb  scratch.ipynb  spy.ipynb  spy_corpus.ipynb  spy_ebm_backtest.ipynb  spy_subperiods.ipynb  vbt_data.ipynb
notebooks/InterpretML/: colin.ipynb  getting_started.ipynb  penguins.ipynb
notebooks/interpret-ml-book/: 05_data_and_models.ipynb
