[project]
name = "interpretable-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "interpret>=0.6.10",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly==5.24.1",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "setuptools>=80.4.0",
]
